--- a/Autobus/View/YolcuGirişView.xaml
+++ b/Autobus/View/YolcuGirişView.xaml
@@ -95,6 +95,22 @@
                                 </StackPanel>
                             </Button.Content>
                         </Button>
+                        <Button Background="Red"
+                            Command="{Binding SeferİptalEt}"
+                            CommandParameter="{Binding SeçiliSefer}"
+                            IsTabStop="False">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Width="32" Height="32">
+                                    <Image.Source>
+                                        <MultiBinding Converter="{StaticResource SystemFileIconConverter}">
+                                            <Binding Source="Shell32.dll" />
+                                            <Binding Source="77" />
+                                        </MultiBinding>
+                                    </Image.Source>
+                                </Image>
+                                <TextBlock Text="SEÇİLİ SEFERİ İPTAL ET" VerticalAlignment="Center" />
+                            </StackPanel>
+                        </Button>
                     </StackPanel>
                 </ScrollViewer>
                 <GroupBox Grid.Column="1" Width="400">
@@ -116,6 +132,7 @@
                     </GroupBox.Header>
                     <ListBox HorizontalContentAlignment="Center"
                         d:ItemsSource="{d:SampleData ItemCount=5}"
+                        IsEnabled="{Binding SeçiliSefer.İptal, Converter={StaticResource ReverseBooleanConverter}}"
                         IsTextSearchEnabled="False"
                         ItemsSource="{Binding SeçiliAraç.KoltukÖnizlemeListe}"
                         SelectedItem="{Binding Müşteri.KoltukNo, ValidatesOnDataErrors=True}"
@@ -216,7 +233,7 @@
                             <RowDefinition />
                             <RowDefinition Height="189.9" />
                         </Grid.RowDefinitions>
-                        <ListBox Grid.Column="1"
+                        <ListBox Grid.Column="1" 
                             d:ItemsSource="{d:SampleData ItemCount=5}"
                             IsSynchronizedWithCurrentItem="False"
                             ItemTemplate="{StaticResource ListBoxMüşteriTemplate}"
