--- a/Autobus/View/YolcuGirişView.xaml
+++ b/Autobus/View/YolcuGirişView.xaml
@@ -66,17 +66,7 @@
                             ItemTemplate="{StaticResource ComboBoxItemSeferTemplate}"
                             ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
                             ItemsSource="{Binding Otobüs.Sefer, Source={StaticResource MainViewModel}}"
-                            Loaded="CbSeferLoaded"
-                            SelectedItem="{Binding SeçiliSefer}">
-                            <x:Code>
-                                <![CDATA[
-                            void CbSeferLoaded(object sender, RoutedEventArgs e)
-                            {
-                                CbSefer.IsDropDownOpen = true;
-                                CbSefer.IsDropDownOpen = false;
-                            }]]>
-                            </x:Code>
-                        </ComboBox>
+                            SelectedItem="{Binding SeçiliSefer}" />
                         <CheckBox VerticalContentAlignment="Center" IsChecked="{Binding Müşteri.BiletÖdendi}">
                             <CheckBox.Content>
                                 <TextBlock FontSize="16" Foreground="Red">
@@ -233,7 +223,7 @@
                             <RowDefinition />
                             <RowDefinition Height="189.9" />
                         </Grid.RowDefinitions>
-                        <ListBox Grid.Column="1" 
+                        <ListBox Grid.Column="1"
                             d:ItemsSource="{d:SampleData ItemCount=5}"
                             IsSynchronizedWithCurrentItem="False"
                             ItemTemplate="{StaticResource ListBoxMüşteriTemplate}"
